# Projeto-de-Gerenciamento

./: .env  .gitignore  README.md  application.css  build_static.py  dashboards.html  docker-compose.dev.yml  docker-compose.main.yml  docker-compose.yml  index.html  package-lock.json  package.json  relatorios.html  schema.sql  start_server.bat  store.js
backend/: .env  .env.example  Cargo.toml  Dockerfile
backend-express/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json  prisma.config.ts  tsconfig.json
backend-express/prisma/: schema.prisma
backend/.cargo/: config.toml
backend/migrations/: 0000_drop_legacy_tables.sql  0001_initial_schema.sql  0002_normalize.sql  0004_add_feedbacks.sql  0005_feedback_forum.sql  0006_feedback_status.sql  0007_feedback_comments.sql  0012_archive.sql  0013_absence_approval.sql  0014_events_ata.sql
backend/sql/: schema.sql
backend/src/: main.rs
backend/src/application/: auth_use_case.rs  log_use_case.rs  mod.rs  use_cases.rs
backend/src/domain/: entities.rs  ports.rs
backend/src/infrastructure/: auth.rs  repositories.rs
backend/src/presentation/: api.rs  auth_extractor.rs  dto.rs  mod.rs
backend/tests/: integration_test.rs
build_tmp/: Cargo.toml
docs/: SKILL.md  antigravyty-clean-architecture.skill
frontend/: .env  Gemfile  puma_log.txt
frontend-next/: Dockerfile  jest.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
scripts/: build_static.py  start_all.bat  start_backend.bat  start_frontend.bat  test-rate-limit.sh
supabase/: config.toml
tasks/: HELP.md
(+229 files in other folders)
