[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }